# vr_sysID_py

./: README.md
autogen/: gen_vr_m2_gen_exitation_trajectory.py  gen_vr_m2_regressor.py
sysid/c/: CMakeLists.txt  validate_regressor.cpp
sysid/c/autogen/VRM2LeftArm/: left_arm_params_to_X.c  left_arm_params_to_X.h  left_arm_params_to_X_base.c  left_arm_params_to_X_base.h  left_arm_regressor.c  left_arm_regressor.h  left_arm_regressor_base.c  left_arm_regressor_base.h  left_arm_tau_from_regressor.c  left_arm_tau_from_regressor.h  left_arm_tau_from_regressor_base.c  left_arm_tau_from_regressor_base.h
sysid/c/autogen/VRM2RightArm/: right_arm_params_to_X.c  right_arm_params_to_X.h  right_arm_params_to_X_base.c  right_arm_params_to_X_base.h  right_arm_regressor.c  right_arm_regressor.h  right_arm_regressor_base.c  right_arm_regressor_base.h  right_arm_tau_from_regressor.c  right_arm_tau_from_regressor.h  right_arm_tau_from_regressor_base.c  right_arm_tau_from_regressor_base.h
sysid/py/: generate_trajectory.py  sysID_left_arm_with_friction.py  sysID_right_arm_with_friction.py  sysID_right_arm_with_friction_base_params.py  trajectory_coeffs.npz  trajectory_data.csv
sysid/py/filter/: filter.py
sysid/py/regressors/: benchmark_regressor.py  build_regressor_lib.py  left_arm_regressor_wrapper.py  right_arm_regressor_wrapper.py
sysid/py/utils/: utils.py
sysid/py/utils/results/: sysID_results_20251218_111427.txt  sysID_results_20251218_111740.txt  sysID_results_20260109_155216.txt  sysID_results_20260109_160600.txt  sysID_results_20260115_131542.txt  sysID_results_20260115_135818.txt  sysID_results_20260115_142758.txt  sysID_results_20260115_150721.txt
